Fix invisible slider track

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ button {
 
 input {
   background-color: var(--color-bg-surface);
-  color: var(--color-text-primary);
+  color: var(--color-secondary);
   border-radius: 0.25rem;
   padding: 3px;
   border: 1px solid transparent;
@@ -117,9 +117,9 @@ input:hover {
 .calendar > h2 > input {
   text-align: center;
   font-family: 'Satoshi';
-  font-weight: bold;
+  font-weight: normal;
   height: 1.5rem;
-  color: var(--color-primary);
+  color: var(--color-secondary);
 }
 
 .calendar > h2 > input:hover {
@@ -370,14 +370,6 @@ input:hover {
   scrollbar-width: thin;
 }
 
-.datesWrapper::-webkit-scrollbar-corner {
-  background: transparent;
-}
-
-.datesWrapper::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
 .eventListWrapper::-webkit-scrollbar-thumb,
 .datesWrapper::-webkit-scrollbar-thumb {
   background: var(--color-text-muted);
@@ -485,7 +477,7 @@ input:hover {
 .eventListDayHeader {
   border-radius: 0.5rem;
   padding: 0.25rem;
-  color: var(--color-secondary);
+  color: var(--color-primary);
   margin-top: 0rem;
   margin-bottom: 0;
 }
@@ -512,14 +504,70 @@ input[type='range'] {
   width: 50px;
 }
 
+input[type='range']::-webkit-slider-runnable-track {
+  height: 0.25rem;
+  background-color: var(--color-text-muted);
+  border-radius: 8px;
+}
+
+input[type='range']::-moz-range-track {
+  height: 0.25rem;
+  background-color: var(--color-text-muted);
+  border-radius: 8px;
+}
+
+input[type='range']::-ms-track {
+  height: 0.25rem;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+input[type='range']::-ms-fill-lower,
+input[type='range']::-ms-fill-upper {
+  background-color: var(--color-text-muted);
+  border-radius: 8px;
+}
+
 input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
   height: 0.5rem;
   width: 0.5rem;
   border-radius: 3px;
-  background: var(--color-primary);
+  background: var(--color-secondary-accent);
   cursor: pointer;
   margin-top: -0.125rem;
+  scale: 1;
+  transition:
+    scale 0.1s ease,
+    color 0.1s ease;
+}
+
+input[type='range']:hover::-webkit-slider-thumb {
+  scale: 1.25;
+  background-color: var(--color-primary);
+}
+
+input[type='range']::-moz-range-thumb {
+  height: 0.5rem;
+  width: 0.5rem;
+  border-radius: 3px;
+  background: var(--color-primary);
+  cursor: pointer;
+  border: none;
+}
+
+input[type='range']::-ms-thumb {
+  height: 0.5rem;
+  width: 0.5rem;
+  border-radius: 3px;
+  background: var(--color-primary);
+  cursor: pointer;
+  border: none;
+}
+
+input#slotInterval:hover {
+  background-color: var(--color-bg-surface);
 }
 
 @media (max-width: 1400px) {
